--- a/package.json
+++ b/package.json
@@ -9,10 +9,62 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@dotlottie/react-player": "^1.6.19",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@gorhom/bottom-sheet": "^4.6.3",
+    "@motify/core": "^0.18.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native/normalize-color": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.9",
+    "expo-app-loading": "^2.1.1",
+    "expo-blur": "^13.0.2",
+    "expo-build-properties": "~0.12.2",
+    "expo-haptics": "^13.0.1",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-location": "^17.0.1",
+    "expo-splash-screen": "^0.27.4",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1"
+    "expo-updates": "~0.25.21",
+    "framer-motion": "^11.2.10",
+    "lottie-react-native": "^6.7.2",
+    "moment": "^2.30.1",
+    "moti": "^0.29.0",
+    "native-base": "^3.4.28",
+    "nominatim-geocoder": "^0.1.4",
+    "normalize-css-color": "^1.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intl": "^6.6.8",
+    "react-native": "0.74.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.17.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-pager-view": "^6.3.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-native-slide-button": "^1.2.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-uri": "^1.2.3",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.10",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
