--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,11 +3,7 @@
 
 name: Carpooling App
 
-on:
-  push:
-    branches: ["master"]
-  pull_request:
-    branches: ["master"]
+on: push
 
 jobs:
   build:
@@ -25,5 +21,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
+
       - run: npm run build --if-present
