--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,11 @@
 
 name: Carpooling App
 
-on: push
+on:
+  push:
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
 
 jobs:
   build:
@@ -23,3 +27,4 @@ jobs:
           cache: "npm"
 
       - run: npm run build --if-present
+      - run: npm test
